# snippet

./: .buildinfo  .cruft.json  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.rst  changlog-pre1.html  genindex.html  index.html  objects.inv  pyproject.toml  pyproject.toml.rej  requirements.txt  run.py  search.html  searchindex.js  setup.py
.doctrees/: changlog-pre1.doctree  environment.pickle  index.doctree
.github/workflows/: lint.yml  pages.yml  pypi.yml  release.yml
_sources/: index.rst.txt
_static/: documentation_options.js
doc/: Makefile  conf.py  index.rst  project.py
doc/_assets/: vim.cast
docs/: changelog.rst  changlog-pre1.rst  conf.py  conf.py.rej  index.rst  integration.rst  intro.rst  requirements.txt  usage.rst
docs/_assets/: zsh.cast
integration/: plugin.nvim  plugin.zsh
sphinxnotes/: __init__.py
sphinxnotes/khufu/: __init__.py  __main__.py  config.py
sphinxnotes/khufu/cli/: snippet.py
sphinxnotes/khufu/ext/: snippet.py
sphinxnotes/khufu/snippet/: __init__.py  cache.py  cli.py  ext.py  filter.py  keyword.py  picker.py
sphinxnotes/khufu/utils/: __init__.py  docmapping.py  ellipsis.py  refactor.py  snippet.py  titlepath.py  titlepath_extra.py
sphinxnotes/snippet/: __init__.py  __main__.py  builder.py  cache.py  cli.py  editor.py  ext.py  filter.py  keyword.py  picker.py  table.py  viewer.py
sphinxnotes/snippet/config/: __init__.py  default.py  preset.py
sphinxnotes/snippet/integration/: binding.sh  binding.vim  binding.zsh  plugin.nvim  plugin.sh  plugin.vim  plugin.zsh
utils/: cli.py  conf.py
(+50 files in other folders)
