[tool.poetry]
name = "sphinxnotes-snippet"
version = "1.1.1"
description = "Non-intrusive snippet manager for Sphinx documentation"
authors = ["Shengyu Zhang <i@silverrainz.me>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
langid = "^1.1.6"
jieba = "^0.42.1"
python-pinyin = "^0.1.0"
pyxdg = "^0.28"
stopwordsiso = "^0.6.1"
wcwidth = "^0.2.5"
wordsegment = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["sphinxnotes"]
exclude = ["**/__pycache__"]
ignore = []
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
